# my_operator

./: README.md
ops-math/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  QUICKSTART.md  README.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.info
ops-math/cmake/: Third_Party_Open_Source_Software_List.yaml  aclnn_ops_math.h.in  dependencies.cmake  func.cmake  gen_ops_info.cmake  intf_pub_linux.cmake  intf_pub_llt_gccnative.cmake  makeself_built_in.cmake  makeself_custom.cmake  opbuild.cmake  package.cmake  static.cmake  symbol.cmake  torch_extension.cmake  ut.cmake  variables.cmake
ops-math/cmake/modules/: FindOPBASE.cmake  FindPython.cmake  Findaicpu.cmake  Finddlog.cmake  Findjson.cmake  Findmetadef.cmake  Findnnopbase.cmake  Findplatform.cmake  Findruntime.cmake  Findsecurec.cmake  Findtilingapi.cmake
ops-math/common/: CMakeLists.txt
ops-math/conversion/as_strided/: CMakeLists.txt  README.md
ops-math/conversion/broadcast_to/: README.md
ops-math/conversion/circular_pad/: README.md
ops-math/conversion/circular_pad_grad/: CMakeLists.txt  README.md
ops-math/conversion/clip_by_value/: CMakeLists.txt  README.md
ops-math/conversion/clip_by_value_v2/: CMakeLists.txt  README.md
ops-math/conversion/coalesce_sparse/: CMakeLists.txt  README.md
ops-math/conversion/concat/: CMakeLists.txt  README.md
ops-math/conversion/concat_d/: CMakeLists.txt  README.md
ops-math/conversion/concat_v2/: CMakeLists.txt  README.md
ops-math/conversion/contiguous/: README.md
ops-math/conversion/depth_to_space/: CMakeLists.txt  README.md
ops-math/conversion/diag_flat/: README.md
ops-math/conversion/diag_v2/: README.md
ops-math/conversion/feeds_repeat/: README.md
ops-math/conversion/fill/: CMakeLists.txt  README.md
ops-math/conversion/fill_diagonal_v2/: README.md
ops-math/conversion/fills/: CMakeLists.txt  README.md
ops-math/conversion/flatten/: README.md
ops-math/conversion/im2col/: README.md
ops-math/conversion/invert_permutation/: CMakeLists.txt  README.md
ops-math/conversion/masked_fill/: CMakeLists.txt  README.md
ops-math/conversion/masked_select_v3/: README.md
ops-math/conversion/matmul_v2_compress_dequant/: README.md
ops-math/conversion/matrix_diag/: CMakeLists.txt
ops-math/conversion/mem_set_v2/: CMakeLists.txt
ops-math/conversion/mirror_pad/: CMakeLists.txt  README.md
ops-math/conversion/npu_format_cast/: README.md
ops-math/conversion/pack/: CMakeLists.txt  README.md
ops-math/conversion/pad/: README.md
ops-math/conversion/pad_v3/: README.md
ops-math/conversion/pad_v3_grad/: README.md
ops-math/conversion/pad_v3_grad_replicate/: CMakeLists.txt  README.md
ops-math/conversion/pad_v3_grad_replication/: README.md
ops-math/conversion/pad_v4_grad/: README.md
ops-math/conversion/reflection_pad3d_grad/: README.md
ops-math/conversion/reshape/: README.md
ops-math/conversion/roll/: CMakeLists.txt  README.md
ops-math/conversion/slice/: CMakeLists.txt  README.md
ops-math/conversion/space_to_depth/: CMakeLists.txt  README.md
ops-math/conversion/split/: CMakeLists.txt  README.md
ops-math/conversion/split_v/: CMakeLists.txt  README.md
ops-math/conversion/squeeze/: README.md
ops-math/conversion/squeezev2/: README.md
ops-math/conversion/squeezev3/: README.md
ops-math/conversion/stack_ball_query/: README.md
ops-math/conversion/strided_slice/: CMakeLists.txt  README.md
ops-math/conversion/strided_slice_assign_v2/: README.md
ops-math/conversion/strided_slice_grad/: CMakeLists.txt  README.md
ops-math/conversion/strided_slice_v3/: README.md
ops-math/conversion/tensor_move/: README.md
ops-math/conversion/trans_data/: README.md
ops-math/conversion/transpose/: CMakeLists.txt  README.md
ops-math/conversion/transpose_v2/: CMakeLists.txt  README.md
ops-math/conversion/tril/: CMakeLists.txt  README.md
ops-math/conversion/triu/: CMakeLists.txt  README.md
ops-math/conversion/unfold_grad/: README.md
ops-math/conversion/unpack/: CMakeLists.txt  README.md
ops-math/conversion/unsqueeze/: README.md
ops-math/conversion/unsqueezev2/: CMakeLists.txt  README.md
ops-math/conversion/unsqueezev3/: README.md
ops-math/conversion/view_copy/: README.md
ops-math/conversion/zeros_like/: CMakeLists.txt
ops-math/docs/: README.md
ops-math/docs/zh/: op_api_list.md  op_list.md
ops-math/examples/: CMakeLists.txt  README.md
ops-math/examples/add_example/: README.md
ops-math/examples/add_example_aicpu/: README.md
ops-math/examples/fast_kernel_launch_example/: CMakeLists.txt  README.md  setup.py
ops-math/experimental/: CMakeLists.txt
ops-math/experimental/math/: CMakeLists.txt
ops-math/experimental/npu_ops_math_ext/: CMakeLists.txt  README.md  requirements.txt  setup.py
ops-math/experimental/random/: CMakeLists.txt
ops-math/math/: CMakeLists.txt
ops-math/math/abs/: CMakeLists.txt  README.md
ops-math/math/accumulate_nv2/: README.md
ops-math/math/acos/: CMakeLists.txt  README.md
ops-math/math/acosh/: README.md
ops-math/math/add/: CMakeLists.txt  README.md
ops-math/random/: CMakeLists.txt
ops-math/tests/: requirements.txt
ops-nn/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  QUICKSTART.md  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.sh  install_deps.sh  requirements.txt  version.info
ops-nn/cmake/: aclnn_ops_nn.h.in  custom_kernel.cmake  dependencies.cmake  func.cmake  gen_ops_info.cmake  intf_pub_linux.cmake  intf_pub_llt_gccnative.cmake  makeself_built_in.cmake  makeself_custom.cmake  opbuild.cmake  package.cmake  runtimeKB.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
ops-nn/common/: CMakeLists.txt
ops-nn/control/: CMakeLists.txt
ops-nn/docs/: README.md
ops-nn/examples/: CMakeLists.txt
ops-nn/foreach/: CMakeLists.txt
ops-nn/index/: CMakeLists.txt
ops-nn/optim/: CMakeLists.txt
ops-nn/pooling/: CMakeLists.txt
ops-nn/quant/: CMakeLists.txt
ops-nn/rnn/: CMakeLists.txt
(+17062 files in other folders)
